--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body{
 .search-box{
     margin-top: 30px;
     text-align: center;
+
 }
 
 .search-box input{
@@ -79,6 +80,28 @@ body{
     padding: 5px 6%;
 }
 
+
+
+
+footer{
+    width: 100%;
+    height: 140px;
+    background-color: rgb(50, 76, 75);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 80px;
+    color: white;
+    position: absolute;
+}
+footer h1,span,p{
+    margin: 4px;
+}
+footer a{
+    text-decoration: none;
+    color: aquamarine;
+}
 
 
 
